RESTCallout/src/objects/Integration_Target__c.object
<CustomObject>
    <fields>
        <fullName>Integration_User__c</fullName>
        <label>Integration User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field_Name__c</fullName>
        <label>User Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Integration Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>